angular ui works - node locations are random right now

--- a/webapp/manager/src/app/app.component.html
+++ b/webapp/manager/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center;">
-  <canvas #canvas width=400 height=400 style="border:5px solid black"></canvas>
+  <canvas #canvas width="{{canvasWidth}}" height="{{canvasHeight}}" style="border:5px solid black"></canvas>
 </div>
 
