--- a/webapp/manager/src/app/app.component.html
+++ b/webapp/manager/src/app/app.component.html
@@ -1,5 +1,2 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center;">
-  <canvas #canvas width="{{canvasWidth}}" height="{{canvasHeight}}" style="border:5px solid black"></canvas>
-</div>
-
+<app-nodeview></app-nodeview>
