configurable block size, other changes

--- a/webapp/manager/src/app/app.component.html
+++ b/webapp/manager/src/app/app.component.html
@@ -1,2 +1,6 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<app-nodeview></app-nodeview>
+<mat-tab-group>
+    <mat-tab label="Visual">
+        <app-nodeview></app-nodeview>
+    </mat-tab>
+    <mat-tab label="Details">test</mat-tab>
+</mat-tab-group>
