--- a/webapp/manager/src/app/nodeview/nodeview.component.html
+++ b/webapp/manager/src/app/nodeview/nodeview.component.html
@@ -1,3 +1,4 @@
-<div style="text-align:center;">
-  <canvas #canvas width="{{canvasWidth}}" height="{{canvasHeight}}" style="border:5px solid black"></canvas>
+<div class="mainwrapper" style="text-align:center;">
+       <canvas class="canvas" #canvas width="{{canvasWidthPixels}}" height="{{canvasHeightPixels}}" style="border:5px solid black"></canvas>
+       <mat-slider [max]=100 [min]=10 [(ngModel)]="blockSizePixels" (input)="onSliderChange($event)"></mat-slider>
 </div>
