--- a/webapp/manager/src/app/nodeview/nodeview.component.css
+++ b/webapp/manager/src/app/nodeview/nodeview.component.css
@@ -1,5 +1,4 @@
 .canvas{
-    margin: 80px;
     float:right;
     position: relative;
     display: flex;
@@ -7,4 +6,8 @@
 }
 .mainwrapper{
     text-align: center;
+    margin:80px;
+}
+.settings-label{
+    color:#7a7a7a;
 }
