--- a/webapp/manager/src/app/nodeview/nodeview.component.css
+++ b/webapp/manager/src/app/nodeview/nodeview.component.css
@@ -10,4 +10,11 @@
 }
 .settings-label{
     color:#7a7a7a;
+    user-select: none;
+}
+.grab-cursor{
+    cursor:grab;
+}
+.default-cursor{
+    cursor:default;
 }
