auto refresh, disable grid option, details view

--- a/webapp/manager/src/app/app.component.html
+++ b/webapp/manager/src/app/app.component.html
@@ -2,5 +2,5 @@
     <mat-tab label="Visual">
         <app-nodeview></app-nodeview>
     </mat-tab>
-    <mat-tab label="Details">test</mat-tab>
+    <mat-tab label="Details"><app-details></app-details></mat-tab>
 </mat-tab-group>
