--- a/webapp/manager/src/app/nodeview/nodeview.component.css
+++ b/webapp/manager/src/app/nodeview/nodeview.component.css
@@ -1,7 +1,13 @@
 .mainwrapper{
     display:grid;
-    grid-template-columns: auto auto auto;
+    grid-template-rows:80px auto;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-evenly;
     align-content: center;
+    text-align: center;
+    grid-column-gap: 80px;
+    margin-right: 80px;
+    margin-left: 80px;
 }
 .settings-label{
     color:#7a7a7a;
@@ -15,9 +21,30 @@
 }
 .left{
     grid-column: 1;
-    margin:auto
+    justify-content: center;
+    display: flex;
+    align-items: center;
 }
 .right{
     grid-column: 2;
-    margin: auto;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+.top{
+    grid-row:1;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+.bottom{
+    grid-row:2;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+
+.item{
+    margin-left: 15px;
+    margin-right:15px;
 }
