turn nodes on or off

--- a/webapp/manager/src/app/details/details.component.css
+++ b/webapp/manager/src/app/details/details.component.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     min-width: 300px;
+    max-width: 800px;
+    margin: auto;
   }
   
   .mat-table {
