--- a/webapp/manager/src/app/nodeview/nodeview.component.css
+++ b/webapp/manager/src/app/nodeview/nodeview.component.css
@@ -43,7 +43,15 @@
     display: flex;
     align-items: center;
 }
-
+.left-container{
+    display:grid;
+    grid-template-rows: auto;
+    grid-template-columns:auto;
+    grid-column-gap: 15px;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+}
 .item{
     margin-left: 15px;
     margin-right:15px;
