starting node movement simulation

--- a/webapp/manager/src/app/details/details.component.html
+++ b/webapp/manager/src/app/details/details.component.html
@@ -13,13 +13,13 @@
       <!-- Latitude Column -->
       <ng-container matColumnDef="latitude">
         <mat-header-cell *matHeaderCellDef> Latitude </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.latitude}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.lat}} </mat-cell>
       </ng-container>
 
       <!-- Longitude Column -->
       <ng-container matColumnDef="longitude">
         <mat-header-cell *matHeaderCellDef> Longitude </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.longitude}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.long}} </mat-cell>
       </ng-container>
 
 
