--- a/webapp/manager/src/app/details/details.component.css
+++ b/webapp/manager/src/app/details/details.component.css
@@ -4,9 +4,11 @@
     min-width: 300px;
     max-width: 800px;
     margin: auto;
+    margin-top:10vh;
+    margin-bottom:25px; /*to account for drop shadow*/
   }
   
   .mat-table {
     overflow: auto;
-    max-height: 80vh;
+    max-height: 70vh;
   }
