working on simulation creator

--- a/webapp/manager/src/app/app.component.html
+++ b/webapp/manager/src/app/app.component.html
@@ -1,6 +1,7 @@
-<mat-tab-group>
+<mat-tab-group [selectedIndex]="2">
     <mat-tab label="Visual">
         <app-nodeview></app-nodeview>
     </mat-tab>
     <mat-tab label="Details"><app-details></app-details></mat-tab>
+    <mat-tab label="Creator"><app-creator></app-creator></mat-tab>
 </mat-tab-group>
