--- a/webapp/manager/src/app/creator/creator.component.html
+++ b/webapp/manager/src/app/creator/creator.component.html
@@ -5,11 +5,11 @@
         <div class="inputswrapper">
           <ng-template matStepLabel>Simulation Name</ng-template>
           <mat-form-field>
-            <input matInput placeholder="Enter name" formControlName="firstCtrl" required>
+            <input matInput placeholder="Enter name" formControlName="filename" required>
           </mat-form-field>
           <br>
           <mat-form-field style="width:400px;height:100px">
-            <textarea matInput placeholder="Description" style="width:400px;height:100px"></textarea>
+            <textarea matInput placeholder="Description" style="width:400px;height:100px" formControlName="description"></textarea>
           </mat-form-field>
         </div>
         <div style="margin:20px">
@@ -23,17 +23,17 @@
         <div *ngFor="let row of nodeConfigRows;let $i=index">
           <div class="configrow">
             <div class="nsew">
-              <input matInput type="number" title="north movement probability" class="north nsewshow" [(ngModel)]="nodeConfigRows[$i].north" [ngModelOptions]="{standalone: true}">
-              <input matInput type="number" title="east movement probability" class="east nsewshow" [(ngModel)]="nodeConfigRows[$i].east" [ngModelOptions]="{standalone: true}">
-              <input matInput type="number" title="south movement probability" class="south nsewshow" [(ngModel)]="nodeConfigRows[$i].south" [ngModelOptions]="{standalone: true}">
-              <input matInput type="number" title="west movement probability" class="west nsewshow" [(ngModel)]="nodeConfigRows[$i].west" [ngModelOptions]="{standalone: true}">
+              <input matInput type="number" title="north movement probability" class="north nsewshow" [(ngModel)]="nodeConfigRows[$i].north" [ngModelOptions]="{standalone: true}" [disabled]="nodeConfigRows[$i].supernode">
+              <input matInput type="number" title="east movement probability" class="east nsewshow" [(ngModel)]="nodeConfigRows[$i].east" [ngModelOptions]="{standalone: true}" [disabled]="nodeConfigRows[$i].supernode">
+              <input matInput type="number" title="south movement probability" class="south nsewshow" [(ngModel)]="nodeConfigRows[$i].south" [ngModelOptions]="{standalone: true}" [disabled]="nodeConfigRows[$i].supernode">
+              <input matInput type="number" title="west movement probability" class="west nsewshow" [(ngModel)]="nodeConfigRows[$i].west" [ngModelOptions]="{standalone: true}" [disabled]="nodeConfigRows[$i].supernode">
             </div>
             <mat-form-field style="width:70px;" class="col2">
                 <input matInput type="number" title="number of nodes to create" style="width:70px; text-align:center" [(ngModel)]="nodeConfigRows[$i].num" [ngModelOptions]="{standalone: true}">
             </mat-form-field>
            
             <mat-checkbox class="col3" ng-true-value="1" ng-false-value="0" title="should be a supernode?" [(ngModel)]="nodeConfigRows[$i].supernode" [ngModelOptions]="{standalone: true}">Supernode</mat-checkbox>
-            <mat-checkbox class="col4" ng-true-value="1" ng-false-value="0" title="all nodes should act as a group?" [(ngModel)]="nodeConfigRows[$i].group" [ngModelOptions]="{standalone: true}">Group</mat-checkbox>
+            <mat-checkbox class="col4" ng-true-value="1" ng-false-value="0" title="all nodes should act as a group?" [(ngModel)]="nodeConfigRows[$i].group" [ngModelOptions]="{standalone: true}" [disabled]="nodeConfigRows[$i].supernode">Group</mat-checkbox>
             <i title="delete row" class="fa fa-times col5" style="color:red;cursor:pointer" (click)="delrow($i)"></i>
 
           </div>
@@ -48,11 +48,10 @@
       </form>
     </mat-step>
     <mat-step>
-      <ng-template matStepLabel>Finish</ng-template>
-      You are now done.
+      <ng-template matStepLabel>Confirm</ng-template>
+      Press create to confirm
       <div style="margin:20px">
-        <button mat-raised-button >Save Config to Server</button>
-        <button mat-raised-button >Download Config</button>
+        <button mat-raised-button (click)="saveConfig()" >Create</button>
       </div>
     </mat-step>
   </mat-horizontal-stepper>
