cleaned some things up

--- a/webapp/manager/src/app/creator/creator.component.css
+++ b/webapp/manager/src/app/creator/creator.component.css
@@ -82,3 +82,46 @@ mat-horizontal-stepper {
     justify-self: center;
     align-self: center;
 }
+
+.confirm{
+    display:grid;
+    grid-template-columns: 1fr 1px 1fr;
+    grid-template-rows: 1fr 150px;
+    grid-gap:40px;
+}
+.confirm .left{
+    grid-column: 1;
+    grid-row: 1;
+    justify-self: center;
+    align-self: center;
+}
+.confirm .separator{
+    grid-column: 2;
+    grid-row: 1;
+    border-left: 1px solid #e1e1e1;
+}
+.confirm .right{
+    grid-column: 3;
+    grid-row: 1;
+    justify-self: center;
+    align-self: center;
+}
+.confirm .footer{
+    grid-area: 2 / 1 / span 1 / span 3;
+    justify-self: center;
+    align-self: center;
+}
+.descpprev{
+    height: 77px;
+    width: 269px;
+    border: 1px solid aliceblue;
+    border-radius: 10px;
+    padding: 8px;
+}
+.jsonpreview{
+    width: 270px;
+    height: 425px;
+    max-width: 100%;
+    border: 1px solid aliceblue;
+    border-radius: 10px;
+}
