--- a/webapp/manager/src/app/nodeview/nodeview.component.html
+++ b/webapp/manager/src/app/nodeview/nodeview.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="bottom left">
       <div>
-        <button mat-raised-button style="margin:20px" (click)="openDialog()">Start a Simulation</button>
+        <button mat-raised-button color="accent" style="margin:20px" (click)="openDialog()">Start a Simulation</button>
         <mat-accordion [multi]=true>
           <mat-expansion-panel [expanded]=false>
             <mat-expansion-panel-header>
