--- a/webapp/manager/src/styles.css
+++ b/webapp/manager/src/styles.css
@@ -4,9 +4,19 @@
 
 html,body{
     margin:0;
+    width:100%;
+    height:100%;
+}
+app-root{
+    width: 100%;
+    height: 100%;
+    display: block;
 }
 .mat-dialog-container{
     border: 3px solid black;
     border-radius: 10px !important;
     background:#9eb5e1;
+}
+.mat-tab-body-wrapper {
+    height: 100% !important;
 }
