--- a/webapp/manager/src/app/simchooser/simchooser.component.css
+++ b/webapp/manager/src/app/simchooser/simchooser.component.css
@@ -1,7 +1,8 @@
 .mainwrapper{
     display:grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1px 1fr;
     grid-template-rows: 500px 100px;
+    grid-gap:20px;
 }
 
 .left{
@@ -10,29 +11,32 @@
     justify-self: center;
     align-self: center;
     text-align: center;
-    padding:10px;
 }
 .right{
     grid-row: 1;
-    grid-column: 2;
+    grid-column: 3;
     justify-self: center;
     align-self: center;
     width:100%;
     text-align: center;
+    
+   
+}
+.middle{
+    grid-row: 1;
+    grid-column: 2;
     border-left: 1px solid #ddefff;
-    padding:10px;
 }
 .footer{
-    grid-area: 2 / 1 / span 1 / span 2;
-    justify-self: right;
+    grid-area: 2 / 1 / span 1 / span 3;
+    justify-self: center;
     align-self: center;
     margin-top: 40px;
-    margin-right: 20px;
+    /* margin-right: 20px; */
 }
 .jsonpreview{
-    width:60%;
-    height:413px;
-    border: none;
+    width: 319px;
+    height: 425px;
     max-width: 100%;
     border: 1px solid aliceblue;
     border-radius: 10px;
