--- a/webapp/manager/src/app/simchooser/simchooser.component.html
+++ b/webapp/manager/src/app/simchooser/simchooser.component.html
@@ -5,7 +5,7 @@
 <div mat-dialog-content style="overflow: hidden">
     <div class="mainwrapper">
     <div class="left mat-typography">
-      <h3>Chose a simulation configuration, or make one in the <span (click)="goToCreator()">Creator</span></h3>
+      <h3>Chose a simulation configuration, or make one in the <span (click)="goToCreator()" class="creatorlink">Creator</span> tab.</h3>
       <mat-select placeholder="Choose Configuration" style="width:200px" (selectionChange)="onChoose($event)">
           <mat-option *ngFor="let file of files" [value]="file">
             {{ file }}
@@ -15,6 +15,9 @@
       <h3 style="margin-top:40px">Description:</h3>
       <textarea class="descpprev" value="{{description}}" readonly></textarea>
     </div>
+    <div class="middle">
+
+    </div>
     <div class="right">
         <div class="mat-typography">
             <h3 style="margin-top:40px">JSON Preview:</h3>
@@ -22,7 +25,7 @@
         <textarea class="jsonpreview" placeholder="{{jsontext | json}}" readonly></textarea>
     </div>
     <div class="footer">
-        <button mat-button (click)="onCancelClick()">Cancel</button>
+        <button mat-raised-button color="primary" (click)="onCancelClick()">Cancel</button>
         <button mat-raised-button style="margin-left:7px">Start</button>
     </div>
   </div>
