--- a/webapp/manager/src/app/simchooser/simchooser.component.css
+++ b/webapp/manager/src/app/simchooser/simchooser.component.css
@@ -60,3 +60,8 @@
     color:#317ed2;
     cursor: pointer;
 }
+.indicatoricon{
+    vertical-align: middle;
+    padding-bottom: 7px;
+    padding-left: 5px; 
+}
