--- a/webapp/manager/src/app/simchooser/simchooser.component.html
+++ b/webapp/manager/src/app/simchooser/simchooser.component.html
@@ -25,8 +25,13 @@
         <textarea class="jsonpreview" placeholder="{{jsontext | json}}" readonly></textarea>
     </div>
     <div class="footer">
-        <button mat-raised-button color="primary" (click)="onCancelClick()">Cancel</button>
-        <button mat-raised-button style="margin-left:7px">Start</button>
+        <button mat-raised-button color="primary" (click)="onCancelClick()">{{closeStr}}</button>
+        <button *ngIf="!success" mat-raised-button style="margin-left:7px"(click)="onStart()" [disabled]="!selected" >Start</button>
+        <i *ngIf="starting" class="fa fa-spinner fa-spin "></i>
+        <mat-icon *ngIf="success">check</mat-icon>
+        <div class="mat-typography" *ngIf="error">
+            <p style="color:red">{{errorMSG}}</p>
+        </div>
     </div>
   </div>
 </div>
