--- a/webapp/manager/src/app/creator/creator.component.css
+++ b/webapp/manager/src/app/creator/creator.component.css
@@ -53,7 +53,7 @@ mat-horizontal-stepper {
 }
 .configrow{
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 0.5fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 0.5fr;
     grid-template-rows: 1fr;
     grid-gap: 7px; 
     margin-bottom: 50px;
@@ -82,6 +82,20 @@ mat-horizontal-stepper {
     justify-self: center;
     align-self: center;
 }
+.configrow .col6{
+    grid-column: 6;
+    text-align:center;
+    justify-self: center;
+    align-self: center;
+}
+
+.configrow .col7{
+    grid-column: 7;
+    text-align:center;
+    justify-self: center;
+    align-self: center;
+}
+
 
 .confirm{
     display:grid;
