--- a/webapp/manager/src/app/nodeview/nodeview.component.html
+++ b/webapp/manager/src/app/nodeview/nodeview.component.html
@@ -147,6 +147,8 @@
       <b>ID:</b> {{nodes.Nodes().get(highlightedNodeId).id}} 
       &nbsp;
       <b>Sample Value:</b> {{nodes.Nodes().get(highlightedNodeId).sv}}
+      &nbsp;
+      <b>Battery:</b> {{nodes.Nodes().get(highlightedNodeId).bp}}
     </div>
 
   </div>
